Fixed global content to footer spacing

--- a/app/assets/stylesheets/artist_release.css.scss
+++ b/app/assets/stylesheets/artist_release.css.scss
@@ -257,7 +257,7 @@
 	left:-43px;
 }
 .release-carousel {
-	padding: 5px 0 15px 33px; 
+	padding: 5px 0 11px 33px; 
 	position: relative;
 	width:566px;
 	height:150px;
