--- a/app/assets/stylesheets/friends_list.css.scss
+++ b/app/assets/stylesheets/friends_list.css.scss
@@ -43,7 +43,7 @@ margin-bottom:26px;
 }
 #friends-list {
   width:667px;
-  margin:0 0 12px 56px;
+  margin:0 0 9px 56px;
   h1 {
 	  margin-bottom:19px;
 	  width:160px;
