--- a/app/assets/stylesheets/manage_artist.css.scss
+++ b/app/assets/stylesheets/manage_artist.css.scss
@@ -32,6 +32,9 @@ a > div {
 		position:absolute;
 		margin:30px 0 0 -37px;
 			}
+#manage-buffer {
+	height:12px;
+}
 #manage-form{
   	position:relative;
     width:649px;
