--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -20,7 +20,7 @@ $overlap: $width*0.25;
   position:relative;
   height:1.9*($height+$v-line-length+$h-v-space)+$h-line-height+20px;
   background-image: url(/images/grid2.png);
-  margin:-166px 0 30px 0;
+  margin:-161px 0 49px 0;
   @extend .scrollbar-timeline;
 }
 #timelime-trim {
